:meat_on_bone: fixed z-index issue on the landing page

--- a/themes/dcnmTheme/assets/sass/partial/_typography.scss
+++ b/themes/dcnmTheme/assets/sass/partial/_typography.scss
@@ -21,6 +21,7 @@ $slab-serif: 'Rockwell', 'Rockwell Extra Bold', 'Courier New', Monoco, Courier, 
 :root {
   --measure: 60ch;
   --ratio: 1.6180339887;
+  --halfRatio: calc(var(--ratio) / 2);
   --s-5: calc(var(--s-4) / var(--ratio));
   --s-4: calc(var(--s-3) / var(--ratio));
   --s-3: calc(var(--s-2) / var(--ratio));
@@ -83,5 +84,6 @@ blockquote {
     position: absolute;
     top: calc(var(--s3) * -1);
     width: var(--s1);
+    z-index: -100;
   }
 }
